apps/adminer/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer
  namespace: adminer
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  rules:
    - host: cloudomega.sytes.net
      http:
        paths:
          - path: /acessodb
            pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  number: 80
  tls:
    - hosts:
        - cloudomega.sytes.net
      secretName: adminer-tls
